<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--suppress AndroidUnknownAttribute -->
    <data class="MovieDetailBinding">

        <import type="com.tritiger.doubanmovie.ui.fragment.MovieDetailFragment" />

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.tritiger.doubanmovie.presenter.MovieDetailViewModel" />
    </data>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/cover"
                        android:layout_width="160dp"
                        android:layout_height="227dp"
                        android:layout_gravity="center"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{vm.movie.cover.large}"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RatingBar
                                android:id="@+id/ratingBar"
                                style="@style/MovieRatingBar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:rating="@{vm.movie.rating.average / 2}"
                                android:stepSize="0.5"
                                tools:rating="2.5" />

                            <TextView
                                android:id="@+id/score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:singleLine="true"
                                android:text="@{`` + vm.movie.rating.average}"
                                android:textColor="@color/gray_500"
                                android:textSize="12sp"
                                tools:text="5.0" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/ratingCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/rated(vm.movie.ratingNum)}"
                            android:textColor="@color/gray_500"
                            android:textSize="12sp"
                            tools:text="100000人评价" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:visibility="@{vm.movie.originalTitle.equals(vm.movie.title) ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/original_title"
                        android:textColor="@color/gray_500" />

                    <TextView
                        android:id="@+id/originalTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{vm.movie.originalTitle}"
                        android:textColor="?android:attr/textColorPrimary"
                        tools:text="Original Title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:visibility="@{vm.movie.directors == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:textColor="@color/gray_500" />

                    <TextView
                        android:id="@+id/director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{MovieDetailFragment.combineNames(vm.movie.directors)}"
                        android:textColor="?android:attr/textColorPrimary"
                        tools:text="Director Name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:visibility="@{vm.movie.writers == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/writers"
                        android:textColor="@color/gray_500" />

                    <TextView
                        android:id="@+id/writers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{MovieDetailFragment.combineNames(vm.movie.writers)}"
                        android:textColor="?android:attr/textColorPrimary"
                        tools:text="Writer Name / Writer Name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:visibility="@{vm.movie.casts == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actors"
                        android:textColor="@color/gray_500" />

                    <TextView
                        android:id="@+id/actors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{MovieDetailFragment.combineNames(vm.movie.casts)}"
                        android:textColor="?android:attr/textColorPrimary"
                        tools:text="Actor Name / Actor Name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:visibility="@{vm.movie.types == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textColor="@color/gray_500" />

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{MovieDetailFragment.combineString(vm.movie.types)}"
                        android:textColor="?android:attr/textColorPrimary"
                        tools:text="Type" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:visibility="@{vm.movie.countries == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:textColor="@color/gray_500" />

                    <TextView
                        android:id="@+id/country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{MovieDetailFragment.combineString(vm.movie.countries)}"
                        android:textColor="?android:attr/textColorPrimary"
                        tools:text="Country" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:visibility="@{vm.movie.languages == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textColor="@color/gray_500" />

                    <TextView
                        android:id="@+id/language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{MovieDetailFragment.combineString(vm.movie.languages)}"
                        android:textColor="?android:attr/textColorPrimary"
                        tools:text="Language" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:visibility="@{vm.movie.releaseDates == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textColor="@color/gray_500" />

                    <TextView
                        android:id="@+id/releaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{MovieDetailFragment.combineString(vm.movie.releaseDates)}"
                        android:textColor="?android:attr/textColorPrimary"
                        tools:text="xxxx-xx-xx(location)" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:visibility="@{vm.movie.durations == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime"
                        android:textColor="@color/gray_500" />

                    <TextView
                        android:id="@+id/runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{MovieDetailFragment.combineString(vm.movie.durations)}"
                        android:textColor="?android:attr/textColorPrimary"
                        tools:text="xxx min" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:visibility="@{vm.movie.akas == null ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aka"
                        android:textColor="@color/gray_500" />

                    <TextView
                        android:id="@+id/aka"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{MovieDetailFragment.combineString(vm.movie.akas)}"
                        android:textColor="?android:attr/textColorPrimary"
                        tools:text="another name" />
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/summary"
                    android:textColor="@color/gray_500" />

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:lineSpacingExtra="6dp"
                    android:maxLines="5"
                    android:text="@{vm.movie.summary}"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="14sp"
                    tools:text="Summary" />

                <TextView
                    android:id="@+id/summaryMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/more_info"
                    android:textColor="@color/green_500"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/recommend"
                    android:textColor="@color/gray_500"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recommendMovies"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:paddingLeft="-2dp"
                    android:paddingRight="-2dp"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</layout>